--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# sqlformat = "0.2.3"
+sqlformat = "0.2.3"
 async-std = "1.12.0"
 chromiumoxide = "0.5.7"
 clap = { version = "4.5.0", features = ["derive"] }
