--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,14 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bin]]
+name = "gen"
+path = "src/main.rs"
+
+[[bin]]
+name = "pdf"
+path = "src/bin/pdf.rs"
+
 [dependencies]
 sqlformat = "0.2.3"
 async-std = "1.12.0"
