--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ serde = "1.0.196"
 serde_json = "1.0.113"
 tera = { version = "1", default-features = false }
 genpdf = { version = "0.2.0", features = ["images"] }
+oxipng = "9.0.0"
